--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
       <artifactId>assertj-core</artifactId>
       <version>3.23.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.12.0</version>
+    </dependency>
   </dependencies>
 
 </project>
